<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>DroneWindow</class>
 <widget class="QMainWindow" name="DroneWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>800</width>
    <height>600</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>MainWindow</string>
  </property>
  <widget class="QWidget" name="centralwidget">
   <layout class="QHBoxLayout" name="horizontalLayout">
    <item>
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
       <layout class="QFormLayout" name="formLayout">
        <item row="0" column="0">
         <widget class="QLabel" name="lbl_ID">
          <property name="text">
           <string>ID :</string>
          </property>
          <property name="buddy">
           <cstring>txt_ID</cstring>
          </property>
         </widget>
        </item>
        <item row="0" column="1">
         <widget class="QLineEdit" name="txt_ID">
          <property name="readOnly">
           <bool>true</bool>
          </property>
         </widget>
        </item>
        <item row="1" column="0">
         <widget class="QLabel" name="lbl_wingType">
          <property name="text">
           <string>Wing Type :</string>
          </property>
          <property name="buddy">
           <cstring>cBox_wingType</cstring>
          </property>
         </widget>
        </item>
        <item row="1" column="1">
         <widget class="QComboBox" name="cBox_wingType">
          <item>
           <property name="text">
            <string>Fixed</string>
           </property>
          </item>
          <item>
           <property name="text">
            <string>Rotor</string>
           </property>
          </item>
         </widget>
        </item>
        <item row="2" column="0">
         <widget class="QLabel" name="lbl_maxAngle">
          <property name="text">
           <string>Max Angle :</string>
          </property>
          <property name="buddy">
           <cstring>txt_maxAngle</cstring>
          </property>
         </widget>
        </item>
        <item row="2" column="1">
         <widget class="QLineEdit" name="txt_maxAngle">
          <property name="readOnly">
           <bool>true</bool>
          </property>
         </widget>
        </item>
        <item row="3" column="0">
         <widget class="QLabel" name="lbl_maxAltitude">
          <property name="text">
           <string>Max Altitude :</string>
          </property>
          <property name="buddy">
           <cstring>txt_maxAltitude</cstring>
          </property>
         </widget>
        </item>
        <item row="3" column="1">
         <widget class="QLineEdit" name="txt_maxAltitude">
          <property name="readOnly">
           <bool>true</bool>
          </property>
         </widget>
        </item>
        <item row="4" column="0">
         <widget class="QLabel" name="lbl_maxRange">
          <property name="text">
           <string>Max Range :</string>
          </property>
          <property name="buddy">
           <cstring>txt_maxRange</cstring>
          </property>
         </widget>
        </item>
        <item row="4" column="1">
         <widget class="QLineEdit" name="txt_maxRange">
          <property name="readOnly">
           <bool>true</bool>
          </property>
         </widget>
        </item>
        <item row="5" column="0">
         <widget class="QLabel" name="lbl_cruiseSpeed">
          <property name="text">
           <string>Cruise Speed :</string>
          </property>
          <property name="buddy">
           <cstring>txt_cruiseSpeed</cstring>
          </property>
         </widget>
        </item>
        <item row="5" column="1">
         <widget class="QLineEdit" name="txt_cruiseSpeed">
          <property name="readOnly">
           <bool>true</bool>
          </property>
         </widget>
        </item>
        <item row="6" column="0">
         <widget class="QLabel" name="lbl_Autonomy">
          <property name="text">
           <string>Autonomy :</string>
          </property>
          <property name="buddy">
           <cstring>txt_Autonomy</cstring>
          </property>
         </widget>
        </item>
        <item row="6" column="1">
         <widget class="QLineEdit" name="txt_Autonomy">
          <property name="readOnly">
           <bool>true</bool>
          </property>
         </widget>
        </item>
        <item row="7" column="0">
         <widget class="QLabel" name="lbl_Payload">
          <property name="text">
           <string>Payload :</string>
          </property>
          <property name="buddy">
           <cstring>txt_Payload</cstring>
          </property>
         </widget>
        </item>
        <item row="7" column="1">
         <widget class="QLineEdit" name="txt_Payload">
          <property name="readOnly">
           <bool>true</bool>
          </property>
         </widget>
        </item>
        <item row="8" column="0">
         <widget class="QLabel" name="lbl_groundPosition">
          <property name="text">
           <string>Ground Position :</string>
          </property>
         </widget>
        </item>
        <item row="9" column="0">
         <widget class="QLabel" name="lbl_latitude">
          <property name="text">
           <string>- Latitude :</string>
          </property>
          <property name="buddy">
           <cstring>txt_latitude</cstring>
          </property>
         </widget>
        </item>
        <item row="9" column="1">
         <widget class="QLineEdit" name="txt_latitude">
          <property name="readOnly">
           <bool>true</bool>
          </property>
         </widget>
        </item>
        <item row="10" column="0">
         <widget class="QLabel" name="lbl_longitude">
          <property name="text">
           <string>- Longitude :</string>
          </property>
          <property name="buddy">
           <cstring>txt_longitude</cstring>
          </property>
         </widget>
        </item>
        <item row="10" column="1">
         <widget class="QLineEdit" name="txt_longitude">
          <property name="readOnly">
           <bool>true</bool>
          </property>
         </widget>
        </item>
       </layout>
      </item>
      <item>
       <widget class="QPushButton" name="btn_Clear">
        <property name="text">
         <string>Clear</string>
        </property>
       </widget>
      </item>
     </layout>
    </item>
    <item>
     <layout class="QVBoxLayout" name="lyt_List">
      <item>
       <widget class="QTableWidget" name="tbl_Drones">
        <property name="editTriggers">
         <set>QAbstractItemView::NoEditTriggers</set>
        </property>
        <property name="sortingEnabled">
         <bool>true</bool>
        </property>
        <property name="columnCount">
         <number>1</number>
        </property>
        <column>
         <property name="text">
          <string>ID</string>
         </property>
        </column>
       </widget>
      </item>
      <item>
       <widget class="QPushButton" name="btn_addDrone">
        <property name="text">
         <string>Add Drone</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QPushButton" name="btn_deleteDrone">
        <property name="text">
         <string>Delete Drone</string>
        </property>
       </widget>
      </item>
     </layout>
    </item>
   </layout>
  </widget>
  <widget class="QMenuBar" name="menubar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>800</width>
     <height>26</height>
    </rect>
   </property>
  </widget>
  <widget class="QStatusBar" name="statusbar"/>
 </widget>
 <resources/>
 <connections/>
</ui>
